Add functions for document api
