# midas-backend/src/controllers/document.controller.ts
@@ -1,7 +1,13 @@
-import { Get, Route, Tags,  Post, Body, Path, Delete, UploadedFiles, Request } from "tsoa";
+import { Get, Route, Tags,  Post, Body, Path, Delete, Request } from "tsoa";
 import { DeleteResult } from "typeorm";
 import {Document} from '../models'
-import { getDocuments, IDocumentPayload, createDocument, getDocument, getClaimDocuments, updateDocument, deleteDocument, downloadDocument, updateDocumentFormData, IS3Payload, createS3Document, generateDocumentPresignedUrl } from "../repositories/document.repository";
+import { IRecordOfAny } from "../models/document";
+import { getDocuments, IDocumentPayload, createDocument, getDocument, getClaimDocuments, updateDocument, deleteDocument, downloadDocument, updateDocumentFormData, IS3Payload, createS3Document, generateDocumentPresignedUrl, generateMultiplePresignedUrl, getDocumentByKey } from "../repositories/document.repository";
+
+export interface IS3FormDataPayload {
+  form_data: IRecordOfAny[];
+  job_id: string
+}
 
 @Route("documents")
 @Tags("Document")
@@ -25,6 +31,11 @@ export default class DocumentController {
   public async getDocument(@Path() id: string): Promise<Document | null> {
     return getDocument(Number(id))
   }
+
+  @Post("/key")
+  public async getDocumentByKey(@Body() body: {key: string}): Promise<Document | null> {
+    return getDocumentByKey(body.key)
+  }
   
   @Get("/claim/:id")
   public async getClaimDocuments(@Path() id: string): Promise<Document[] | null> {
@@ -41,20 +52,20 @@ export default class DocumentController {
     return generateDocumentPresignedUrl(Number(id))
   }
 
-  // @Get("/multiPresigned")
-  // public async generateMultiplePresignedUrl(@Path() id: string): Promise<any | null> {
-  //   return generateMultiplePresignedUrl(Number(id))
-  // }
+  @Post("/multiPresigned")
+  public async generateMultiplePresignedUrl(@Body() ids: {id: number}[]): Promise<any | null> {
+    return generateMultiplePresignedUrl(ids)
+  }
 
   @Post("/bootstrap")
   public async createS3Document(@Body() body: IS3Payload): Promise<any | null> {
     return createS3Document(body)
   }
 
-  // @Post("/bootstrap")
-  // public async updateDocumentFormData(@Body() body: IS3Payload): Promise<any | null> {
-  //   return updateDocumentFormData(body)
-  // }
+  @Post("/formdata")
+  public async updateDocumentFormData(@Body() body: IS3FormDataPayload): Promise<any | null> {
+    return updateDocumentFormData(body.form_data, body.job_id)
+  }
 
   @Delete("/:id")
   public async deleteDocument(@Path() id: string): Promise<DeleteResult | null> {
